7103610: _NET_WM_PID and WM_CLIENT_MACHINE are not set

Set the properties to all top-level windows

Reviewed-by: anthony